--- a/.github/workflows/AzureBuildFrontendDockerImagePushACR.yml
+++ b/.github/workflows/AzureBuildFrontendDockerImagePushACR.yml
@@ -1,6 +1,10 @@
 name: Build Frontend Linux Container Image and Push to ACR 
 
 on:
+  push:
+    branches: [ main, dev ]
+  pull_request:
+    branches: [ main, dev ]
   workflow_dispatch:
 
 jobs:
