--- a/.github/workflows/AzureBuildFrontendDockerImagePushACR.yml
+++ b/.github/workflows/AzureBuildFrontendDockerImagePushACR.yml
@@ -2,9 +2,9 @@ name: Build Frontend Linux Container Image and Push to ACR
 
 on:
   push:
-    branches: [ main, dev ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, dev ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
