--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -7,6 +7,13 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "paths": {
+      "@/modules": ["modules"],
+      "@/pages": ["pages"],
+      "@/services": ["services"],
+      "@/store": ["store"],
+      "@/styles": ["styles"],
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
