--- a/backend/BobrVerse.Dal/BobrVerse.Dal.csproj
+++ b/backend/BobrVerse.Dal/BobrVerse.Dal.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.1">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.12">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -15,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BobrVerse.Auth\BobrVerse.Auth.csproj" />
+    <ProjectReference Include="..\BobrVerse.Common\BobrVerse.Common.csproj" />
   </ItemGroup>
 
 </Project>
