--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,30 +1,25 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
 
-
-# This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["BobrVerse.Api/BobrVerse.Api.csproj", "BobrVerse.Api/"]
+COPY ["./BobrVerse.Api/BobrVerse.Api.csproj", "./BobrVerse.Api.WebApi/"]
+COPY ["./BobrVerse.Auth/BobrVerse.Auth.csproj", "./BobrVerse.Auth/"]
+COPY ["./BobrVerse.Bll/BobrVerse.Bll.csproj", "./BobrVerse.Bll/"]
+COPY ["./BobrVerse.Dal/BobrVerse.Dal.csproj", "./BobrVerse.Dal/"]
+
 RUN dotnet restore "./BobrVerse.Api/BobrVerse.Api.csproj"
 COPY . .
 WORKDIR "/src/BobrVerse.Api"
-RUN dotnet build "./BobrVerse.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "BobrVerse.Api.csproj" -c Release -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./BobrVerse.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./BobrVerse.Api.csproj" -c Release -o /app/publish
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
+ENV ASPNETCORE_HTTP_PORTS 80
 ENTRYPOINT ["dotnet", "BobrVerse.Api.dll"]
