--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -8,8 +8,12 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "paths": {
+      "@/common": ["common"],
+      "@/layouts": ["layouts"],
+      "@/models": ["models"],
       "@/modules": ["modules"],
       "@/pages": ["pages"],
+      "@/resources": ["resources"],
       "@/services": ["services"],
       "@/store": ["store"],
       "@/styles": ["styles"],
