--- a/backend/BobrVerse.Bll/BobrVerse.Bll.csproj
+++ b/backend/BobrVerse.Bll/BobrVerse.Bll.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.23.0" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BobrVerse.Dal\BobrVerse.Dal.csproj" />
   </ItemGroup>
 
