--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:20-alpine3.20 AS build
 WORKDIR /usr/src/app
-COPY package*.json ./
+COPY package*.json package-lock.json ./
 RUN npm ci
 COPY ./ ./
 RUN npm run build
