--- a/.github/workflows/AzureDeployFrontendFromMain.yml
+++ b/.github/workflows/AzureDeployFrontendFromMain.yml
@@ -33,8 +33,11 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker build . -t bobrverse.azurecr.io/frontend:${{ github.sha }}
-        docker push bobrverse.azurecr.io/frontend:${{ github.sha }}   
+        docker build . \
+          --build-arg VITE_API_URL=${{ secrets.VITE_API_URL }} \
+          --build-arg VITE_GOOGLE_CLIENT_ID=${{ secrets.VITE_GOOGLE_CLIENT_ID }} \
+          -t bobrverse.azurecr.io/frontend:${{ github.sha }}
+        docker push bobrverse.azurecr.io/frontend:${{ github.sha }}
       
     - uses: azure/webapps-deploy@v2
       with:
