--- a/backend/BobrVerse.Bll/BobrVerse.Bll.csproj
+++ b/backend/BobrVerse.Bll/BobrVerse.Bll.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\BobrVerse.Dal\BobrVerse.Dal.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
