--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -13,7 +13,7 @@ server {
   # Serve all routes and pages
   # Use the base name to serve all pages. In this case, the base name is "/".
   location / {
-    try_files $uri /index.html =404;
+    try_files $uri $uri/ /index.html;
   }
 
   # Example: If your base name is "/example", the location block will look like this:
