--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -6,7 +6,7 @@ server {
   index index.html;
 
   location / {
-    try_files $uri /index.html;
+    try_files $uri $uri/ /index.html;
   }
 
   location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|map)$ {
@@ -14,6 +14,6 @@ server {
     access_log off;
     add_header Cache-Control "public";
   }
-  
+
   error_page 404 /index.html;
 }
