--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "react-simple-code-editor": "^0.14.1",
     "sass": "^1.84.0"
   },
   "devDependencies": {
