--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-simple-code-editor": "^0.14.1",
-    "sass": "^1.84.0"
+    "sass": "^1.84.0",
+    "worker-timers": "^8.0.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
